--- a/public/index.ejs
+++ b/public/index.ejs
@@ -13,6 +13,10 @@
         margin: 0;
     }
 
+    body {
+        background-color: #eee;
+    }
+
     .main {
         margin: 100px 200px;
     }
