--- a/src/styles/index.less
+++ b/src/styles/index.less
@@ -2,9 +2,15 @@
 
 // 全局初始化样式
 * {
-    box-sizing: border-box;
+    box-sizing : border-box;
+    padding    : 0;
+    margin     : 0;
+    color      : @ui-text;
+    font-size  : @ui-font-size;
+    line-height: @ui-line-height-base;
 }
 
+// 输入框
 input[type="text"],
 input[type="password"] {
     background   : transparent;
@@ -25,12 +31,256 @@ input[type="password"] {
         border-color  : @ui-form-control-line-active;
     }
 
-    /*  &::-webkit-input-placeholder,
-    &:-moz-placeholder,
-    &::-moz-placeholder,
-    &:-ms-input-placeholder, */
     &::placeholder {
         color    : @ui-aide-text;
         font-size: 0.9em;
+    }
+}
+
+// 链接
+.link {
+    display      : inline-block;
+    color        : #3850fa;
+    font-size    : 12px;
+    cursor       : pointer;
+    border-bottom: 1px solid transparent;
+    margin-left  : 5px;
+
+    &:hover {
+        border-bottom: 1px solid #3850fa;
+    }
+}
+
+// 透明的过渡效果
+.opacity-enter-active,
+.opacity-leave-active {
+    transition: opacity @ui-transition-duration;
+}
+
+.opacity-enter-from,
+.opacity-leave-to {
+    opacity: 0;
+}
+
+.pointer {
+    cursor: pointer;
+}
+
+.center {
+    text-align: center;
+}
+
+.right {
+    text-align: right;
+}
+
+// 抖动动画
+.my-face {
+    &:hover {
+        -webkit-animation: my-face 5s infinite ease-in-out;
+        animation        : my-face 5s infinite ease-in-out;
+    }
+}
+
+@keyframes my-face {
+    2% {
+        transform: translate(0, 1.5px) rotate(1.5deg);
+    }
+
+    4% {
+        transform: translate(0, -1.5px) rotate(-0.5deg);
+    }
+
+    6% {
+        transform: translate(0, 1.5px) rotate(-1.5deg);
+    }
+
+    8% {
+        transform: translate(0, -1.5px) rotate(-1.5deg);
+    }
+
+    10% {
+        transform: translate(0, 2.5px) rotate(1.5deg);
+    }
+
+    12% {
+        transform: translate(0, -0.5px) rotate(1.5deg);
+    }
+
+    14% {
+        transform: translate(0, -1.5px) rotate(1.5deg);
+    }
+
+    16% {
+        transform: translate(0, -0.5px) rotate(-1.5deg);
+    }
+
+    18% {
+        transform: translate(0, 0.5px) rotate(-1.5deg);
+    }
+
+    20% {
+        transform: translate(0, -1.5px) rotate(2.5deg);
+    }
+
+    22% {
+        transform: translate(0, 0.5px) rotate(-1.5deg);
+    }
+
+    24% {
+        transform: translate(0, 1.5px) rotate(1.5deg);
+    }
+
+    26% {
+        transform: translate(0, 0.5px) rotate(0.5deg);
+    }
+
+    28% {
+        transform: translate(0, 0.5px) rotate(1.5deg);
+    }
+
+    30% {
+        transform: translate(0, -0.5px) rotate(2.5deg);
+    }
+
+    32% {
+        transform: translate(0, 1.5px) rotate(-0.5deg);
+    }
+
+    34% {
+        transform: translate(0, 1.5px) rotate(-0.5deg);
+    }
+
+    36% {
+        transform: translate(0, -1.5px) rotate(2.5deg);
+    }
+
+    38% {
+        transform: translate(0, 1.5px) rotate(-1.5deg);
+    }
+
+    40% {
+        transform: translate(0, -0.5px) rotate(2.5deg);
+    }
+
+    42% {
+        transform: translate(0, 2.5px) rotate(-1.5deg);
+    }
+
+    44% {
+        transform: translate(0, 1.5px) rotate(0.5deg);
+    }
+
+    46% {
+        transform: translate(0, -1.5px) rotate(2.5deg);
+    }
+
+    48% {
+        transform: translate(0, -0.5px) rotate(0.5deg);
+    }
+
+    50% {
+        transform: translate(0, 0.5px) rotate(0.5deg);
+    }
+
+    52% {
+        transform: translate(0, 2.5px) rotate(2.5deg);
+    }
+
+    54% {
+        transform: translate(0, -1.5px) rotate(1.5deg);
+    }
+
+    56% {
+        transform: translate(0, 2.5px) rotate(2.5deg);
+    }
+
+    58% {
+        transform: translate(0, 0.5px) rotate(2.5deg);
+    }
+
+    60% {
+        transform: translate(0, 2.5px) rotate(2.5deg);
+    }
+
+    62% {
+        transform: translate(0, -0.5px) rotate(2.5deg);
+    }
+
+    64% {
+        transform: translate(0, -0.5px) rotate(1.5deg);
+    }
+
+    66% {
+        transform: translate(0, 1.5px) rotate(-0.5deg);
+    }
+
+    68% {
+        transform: translate(0, -1.5px) rotate(-0.5deg);
+    }
+
+    70% {
+        transform: translate(0, 1.5px) rotate(0.5deg);
+    }
+
+    72% {
+        transform: translate(0, 2.5px) rotate(1.5deg);
+    }
+
+    74% {
+        transform: translate(0, -0.5px) rotate(0.5deg);
+    }
+
+    76% {
+        transform: translate(0, -0.5px) rotate(2.5deg);
+    }
+
+    78% {
+        transform: translate(0, -0.5px) rotate(1.5deg);
+    }
+
+    80% {
+        transform: translate(0, 1.5px) rotate(1.5deg);
+    }
+
+    82% {
+        transform: translate(0, -0.5px) rotate(0.5deg);
+    }
+
+    84% {
+        transform: translate(0, 1.5px) rotate(2.5deg);
+    }
+
+    86% {
+        transform: translate(0, -1.5px) rotate(-1.5deg);
+    }
+
+    88% {
+        transform: translate(0, -0.5px) rotate(2.5deg);
+    }
+
+    90% {
+        transform: translate(0, 2.5px) rotate(-0.5deg);
+    }
+
+    92% {
+        transform: translate(0, 0.5px) rotate(-0.5deg);
+    }
+
+    94% {
+        transform: translate(0, 2.5px) rotate(0.5deg);
+    }
+
+    96% {
+        transform: translate(0, -0.5px) rotate(1.5deg);
+    }
+
+    98% {
+        transform: translate(0, -1.5px) rotate(-0.5deg);
+    }
+
+    0%,
+    100% {
+        transform: translate(0, 0) rotate(0deg);
     }
 }
