--- a/src/styles/variables.less
+++ b/src/styles/variables.less
@@ -1,7 +1,6 @@
 // 基础颜色
 @ui-global-bg                : var(--ui-global-bg, #fcfcfc); // 全局带底色背景
 @ui-global-bg-normal         : var(--ui-global-bg-normal, #ffffff); // 全局白色背景
-@ui-base-bg                  : var(--ui-base-bg, #ffffff); // 基础区块背景白色
 @ui-text                     : var(--ui-text, #252b3a); // 正文文本
 @ui-text-weak                : var(--ui-text-weak, #575d6c); // 弱化的正文信息（手风琴子项，表头）
 @ui-aide-text                : var(--ui-aide-text, #8a8e99); // 辅助文本、帮助信息（面包屑）
@@ -10,12 +9,14 @@
 @ui-warning                  : var(--ui-warning, #fac20a); // 警告、需注意类型提示
 @ui-success                  : var(--ui-success, #50d4ab); // 成功、正确
 @ui-info                     : var(--ui-info, #5e7ce0); // 通知、一般提示、执行中
+@ui-shadow                   : var(--ui-shadow, rgba(0, 0, 0, 0.2)); // 阴影色
+@ui-light-shadow             : var(--ui-light-shadow, rgba(0, 0, 0, 0.1)); // 弱化阴影色
 // 链接
-@ui-link                     : var(--ui-link, #6062ce); // 链接文本颜色
-@ui-link-decoration          : var(--ui-link, #6062ce); // 链接文本颜色
+@ui-link                     : var(--ui-link, #5e7ce0); // 链接文本颜色
+@ui-link-decoration          : var(--ui-link, #5e7ce0); // 链接文本颜色
 @ui-link-active              : var(--ui-link-active, #030405); // 链接文本悬停/激活颜色
 // 分割线
-@ui-border-line              : var(--ui-line, #adb0b8); // 边框
+@ui-border-line              : var(--ui-line, #ebeef5); // 边框
 @ui-dividing-line            : var(--ui-dividing-line, #dfe1e6); // 内容分割线，用于内容之间的分割
 // 过渡
 @ui-transition-duration      : var(--ui-transition-duration, 0.3s ease); // 阴影
@@ -37,5 +38,3 @@
 @ui-line-height-base         : 1.5; //规范行高
 @ui-font-title-weight        : bold; //标题文字粗细
 @ui-font-content-weight      : normal; //内容文字粗细
-
-
