--- a/src/styles/index.less
+++ b/src/styles/index.less
@@ -1,4 +1,5 @@
 @import url(./variables.less);
+@import url(./form.less);
 
 // 全局初始化样式
 * {
@@ -8,33 +9,6 @@
     color      : @ui-text;
     font-size  : @ui-font-size;
     line-height: @ui-line-height-base;
-}
-
-// 输入框
-input[type="text"],
-input[type="password"] {
-    background   : transparent;
-    padding      : 0 0.5em;
-    width        : 100%;
-    height       : 2.4em;
-    border       : 0.5px solid @ui-form-control-line;
-    border-radius: @ui-border-radius;
-    transition   : all @ui-transition-duration;
-
-    &:hover {
-        border-color: @ui-form-control-line-hover;
-    }
-
-    &:focus {
-        outline-offset: 0px;
-        outline       : none;
-        border-color  : @ui-form-control-line-active;
-    }
-
-    &::placeholder {
-        color    : @ui-aide-text;
-        font-size: 0.9em;
-    }
 }
 
 // 链接
@@ -60,6 +34,24 @@ input[type="password"] {
 .opacity-enter-from,
 .opacity-leave-to {
     opacity: 0;
+}
+
+// 位移过渡
+.tt-enter-active,
+.tt-leave-active {
+    transition: opacity @ui-transition-duration, transform @ui-transition-duration;
+}
+
+.tt-enter-from {
+    overflow : hidden;
+    transform: translateX(50px);
+    opacity  : 0;
+}
+
+.tt-leave-to {
+    overflow : hidden;
+    transform: translateX(-50px);
+    opacity  : 0;
 }
 
 .pointer {
