--- a/src/styles/variables.less
+++ b/src/styles/variables.less
@@ -11,7 +11,10 @@
 @ui-info                     : var(--ui-info, #5e7ce0); // 通知、一般提示、执行中
 @ui-shadow                   : var(--ui-shadow, rgba(0, 0, 0, 0.2)); // 阴影色
 @ui-light-shadow             : var(--ui-light-shadow, rgba(0, 0, 0, 0.1)); // 弱化阴影色
-// 链接
+// 下拉菜单
+@ui-dropdown-menu-item       : var(--ui-dropdown-menu-item, #5e7ce0);
+@ui-dropdown-menu-item-color : var(--ui-dropdown-menu-item-color, #ffffff);
+// 连接
 @ui-link                     : var(--ui-link, #5e7ce0); // 链接文本颜色
 @ui-link-decoration          : var(--ui-link, #5e7ce0); // 链接文本颜色
 @ui-link-active              : var(--ui-link-active, #030405); // 链接文本悬停/激活颜色
@@ -28,7 +31,7 @@
 @ui-form-control-line-hover  : var(--ui-form-control-line-hover, #acafb4); // 表单控件边框悬停反馈色
 @ui-form-control-line-active : var(--ui-form-control-line-active, #597bec); // 表单控件边框激活色，用于获得焦点
 // 加载动画颜色
-@ui-loading-color            : var(--ui-loading-color, #9dc6f1);
+@ui-loading-color            : var(--ui-loading-color, #a29df1);
 @ui-loading-shadow-color     : var(--ui-loading-color, #000000);
 // 字体
 @ui-font-size                : var(--ui-font-size, 14px); //正文、卡片副标题
