--- a/src/styles/variables.less
+++ b/src/styles/variables.less
@@ -15,9 +15,8 @@
 @ui-dropdown-menu-item       : var(--ui-dropdown-menu-item, #5e7ce0);
 @ui-dropdown-menu-item-color : var(--ui-dropdown-menu-item-color, #ffffff);
 // 连接
-@ui-link                     : var(--ui-link, #5e7ce0); // 链接文本颜色
-@ui-link-decoration          : var(--ui-link, #5e7ce0); // 链接文本颜色
-@ui-link-active              : var(--ui-link-active, #030405); // 链接文本悬停/激活颜色
+@ui-link                     : var(--ui-link, #405486); // 链接文本颜色
+@ui-link-active              : var(--ui-link-active, #2495ff); // 链接文本悬停/激活颜色
 // 分割线
 @ui-border-line              : var(--ui-line, #ebeef5); // 边框
 @ui-dividing-line            : var(--ui-dividing-line, #dfe1e6); // 内容分割线，用于内容之间的分割
