--- a/server/comment_server/templates/email.template.ejs
+++ b/server/comment_server/templates/email.template.ejs
@@ -18,10 +18,10 @@
                 <div style="font-size: 16px;color: #2B2B2B;line-height: 24px;">你好，</div>
                 <div style="font-size: 16px;color: #2B2B2B;line-height: 28px;font-weight:bold;margin-top:10px;">
                     <% if(type===1){%>
-                        <span>你在 <%= title %> 中的评论，收到了新的回复。</span>
+                        <span>你在 【<%= title %>】 中的评论，收到了新的回复。</span>
                         <% } else {%>
                             <span>
-                                <%= title %>中，收到了新的评论。
+                                【<%= title %>】中，收到了新的评论。
                             </span>
                             <% } %>
                                 <span style="color:#4B6EA4;"><a href="<%= href %>" target="_blank"><wbr>查看详情<wbr></a></span>
@@ -40,10 +40,10 @@
                         <div class="logo">
                             <img class="exmail_logo" src="<%= siteLogo %>" width="40" height="40" style="width: 40px;height: 40px;border-radius: 50%;" alt="logo">
                         </div>
-                    <% } %>
-                    <div>
-                        来自于<%= siteName %>
-                    </div>
+                        <% } %>
+                            <div>
+                                来自于<%= siteName %>
+                            </div>
                 </div>
             </div>
         </div>
