--- a/src/styles/form.less
+++ b/src/styles/form.less
@@ -10,7 +10,7 @@ input[type=checkbox] {
 
     &:checked {
         &+.ui-switch {
-            color: #2486ff;
+            color: @ui-info;
 
             &::before {
                 margin-left: 18px;
@@ -18,8 +18,8 @@ input[type=checkbox] {
         }
 
         +.ui-checkbox {
-            color           : #2486ff;
-            background-color: #2486ff;
+            color           : @ui-info;
+            background-color: @ui-info;
 
             &::after {
                 visibility       : visible;
@@ -57,7 +57,7 @@ input[type=checkbox] {
             width             : 18px;
             height            : 18px;
             border-radius     : 50%;
-            background-color  : #fff;
+            background-color  : @ui-bg;
             -webkit-transition: margin-left .2s;
             transition        : margin-left .2s;
         }
@@ -67,11 +67,11 @@ input[type=checkbox] {
         display            : inline-block;
         width              : 20px;
         height             : 20px;
-        border             : 1px solid rgba(0, 0, 0, 0);
+        border             : 1px solid transparent;
         border-radius      : 4px;
         box-sizing         : border-box;
         box-shadow         : inset 0 1px, inset 1px 0, inset -1px 0, inset 0 -1px;
-        background-color   : #fff;
+        background-color   : @ui-bg;
         background-clip    : content-box;
         color              : #d0d0d5;
         -webkit-transition : color .2s, background-color .1s;
