uod: 修改自定义组件结构

--- a/src/styles/index.less
+++ b/src/styles/index.less
@@ -39,12 +39,12 @@ a.link {
 // 透明的过渡效果
 .opacity-enter-active,
 .opacity-leave-active {
-    transition: opacity @ui-transition-duration;
+    transition: opacity @ui-transition-duration, transform @ui-transition-duration;
 }
 
 .opacity-enter-from,
 .opacity-leave-to {
-    opacity: 0;
+    opacity  : 0;
 }
 
 // 位移过渡
