--- a/src/styles/index.less
+++ b/src/styles/index.less
@@ -44,7 +44,7 @@ a.link {
 
 .opacity-enter-from,
 .opacity-leave-to {
-    opacity  : 0;
+    opacity: 0;
 }
 
 // 位移过渡
@@ -322,4 +322,4 @@ each(range(10, 20, 10), .(@v) {
 
     }
 
-)
+);
