upd: add skeleton

--- a/src/styles/index.less
+++ b/src/styles/index.less
@@ -77,6 +77,14 @@ a.link {
     text-align: right;
 }
 
+
+.emoji-icon {
+    img {
+        width         : 24px;
+        pointer-events: none;
+    }
+}
+
 // 抖动动画
 .my-face {
     &:hover {
