--- a/src/components/index.less
+++ b/src/components/index.less
@@ -1,14 +1,11 @@
-/* @import url(./audit);
-
-
-@import url(./comment);
-@import url(./dropdown);
+/* 
 @import url(./editor);
-@import url(./form);
-@import url(./loading);
-@import url(./login);
  */
 @import url(./avatar);
 @import url(./button);
+@import url(./comment);
+@import url(./dropdown);
+@import url(./loading);
+@import url(./form);
 @import url(./model);
-@import url(./skeleton/index.less);
+@import url(./skeleton);
