--- a/src/components/model/index.less
+++ b/src/components/model/index.less
@@ -16,7 +16,7 @@
     background   : @ui-bg;
     border-radius: @ui-border-radius-card;
 
-    .header {
+    .m-model-header {
         border-bottom: 0.5px solid @ui-border-line;
         padding      : 0 1em;
         display      : flex;
@@ -24,7 +24,7 @@
         user-select  : none;
         cursor       : move;
 
-        .title {
+        .m-model-title {
             font-size  : @ui-font-size-card-title;
             line-height: 2.6em;
             flex       : 1;
@@ -40,7 +40,7 @@
         }
     }
 
-    .body {
+    .m-model-body {
         padding: 1.2em 1.6em;
     }
 }
