upd: svg loader

--- a/src/components/index.less
+++ b/src/components/index.less
@@ -7,5 +7,6 @@
 @import url(./dropdown);
 @import url(./loading);
 @import url(./form);
+@import url(./empty/);
 @import url(./model);
 @import url(./skeleton);
