--- a/src/components/model/index.less
+++ b/src/components/model/index.less
@@ -31,8 +31,9 @@
         }
 
         .close-btn {
-            cursor: pointer;
-            fill  : #c3c3c3;
+            cursor     : pointer;
+            fill       : #c3c3c3;
+            line-height: 1;
 
             &:hover {
                 fill: #000;
