--- a/src/styles/index.less
+++ b/src/styles/index.less
@@ -325,7 +325,11 @@ each(range(10, 20, 10), .(@v) {
                         }
                     }
 
-                )
+                );
+
+                .@{k}-@{v} {
+                    @{x}:(@v*1px);
+                }
             }
 
         );
