--- a/public/index.ejs
+++ b/public/index.ejs
@@ -6,6 +6,7 @@
     <title>
         <%= htmlWebpackPlugin.options.title %>
     </title>
+    <script src="https://cdn.jsdelivr.net/npm/echarts@5.2.2/dist/echarts.min.js"></script>
 </head>
 <style>
     * {
