--- a/src/components/index.less
+++ b/src/components/index.less
@@ -1,6 +1,6 @@
-
 @import url(./avatar);
 @import url(./button);
+@import url(./card);
 @import url(./comment);
 @import url(./dropdown);
 @import url(./loading);
