--- a/public/index.ejs
+++ b/public/index.ejs
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang="zh-cn">
 
 <head>
     <meta charset="utf-8" />
     <title>
         <%= htmlWebpackPlugin.options.title %>
     </title>
-    <script src="https://cdn.jsdelivr.net/npm/echarts@5.2.2/dist/echarts.min.js"></script>
+    <script src="https://unpkg.com/echarts@5.2.2/dist/echarts.simple.min.js"></script>
 </head>
 <style>
     * {
@@ -25,8 +25,8 @@
 
 <body>
     <div class="main">
-        <!-- <com-site-count no-statistical env="<%= htmlWebpackPlugin.options.envId %>" hash="<%= htmlWebpackPlugin.options.pageHash %>"></com-site-count> -->
-        <!-- <com-site-count env="<%= htmlWebpackPlugin.options.envId %>"></com-site-count> -->
+        <!-- <com-site-count no-statistical env="<%= htmlWebpackPlugin.options.envId %>" hash="<%= htmlWebpackPlugin.options.pageHash %>"></com-site-count>
+        <com-site-count no-statistical env="<%= htmlWebpackPlugin.options.envId %>"></com-site-count> -->
         <com-comment-admin env="<%= htmlWebpackPlugin.options.envId %>"></com-comment-admin>
         <com-comment env="<%= htmlWebpackPlugin.options.envId %>" hash="<%= htmlWebpackPlugin.options.pageHash %>"></com-comment>
     </div>
