--- a/src/components/editor/index.less
+++ b/src/components/editor/index.less
@@ -1,8 +1,8 @@
-.comment-editor {
+.m-editor {
     padding: 5px 0 0;
 
     // 编辑框
-    .comment-editor-container {
+    .m-editor-container {
         display      : block;
         padding      : 10px;
         margin-bottom: 10px;
@@ -34,7 +34,7 @@
             }
         }
 
-        .comment-editor-instance {
+        .m-editor-instance {
             vertical-align: baseline;
             outline       : none;
             letter-spacing: 1px;
@@ -50,35 +50,30 @@
         }
     }
 
-    .comment-editor-emojis {
+    .m-editor-emojis {
         display        : flex;
         justify-content: space-between;
         align-items    : center;
 
-        .comment-editor-emojis-btn {
+        .m-editor-emojis-btn {
             display    : flex;
             align-items: center;
         }
     }
 }
 
-.admin-tips {
-    height     : 42px;
-    line-height: 42px;
-}
-
-.emoji-panel {
+.m-emoji-panel {
     position   : relative;
     user-select: none;
 
-    .emoji-btn {
+    .m-emoji-btn {
         cursor : pointer;
         display: inline-block;
         width  : 24px;
         height : 24px;
     }
 
-    .emoji-container {
+    .m-emoji-container {
         background-color: @ui-bg;
         position        : absolute;
         z-index         : 2;
@@ -91,7 +86,7 @@
         display       : flex;
         flex-direction: column;
 
-        .emoji-nav {
+        .m-emoji-nav {
             height          : 32px;
             line-height     : 32px;
             background-color: @ui-bg;
@@ -108,7 +103,7 @@
             }
         }
 
-        .emoji-items {
+        .m-emoji-items {
             flex      : 1;
             margin    : 0;
             padding   : 10px 0 0 10px;
@@ -120,7 +115,7 @@
                 display: block;
             }
 
-            .emoji-item {
+            .m-emoji-item {
                 list-style-type   : none;
                 background-color  : @ui-aide-bg;
                 padding           : 5px 10px;
