--- a/public/index.ejs
+++ b/public/index.ejs
@@ -6,7 +6,7 @@
     <title>
         <%= htmlWebpackPlugin.options.title %>
     </title>
-    <script src="https://unpkg.com/echarts@5.2.2/dist/echarts.min.js"></script>
+    <!-- <script src="https://unpkg.com/echarts@5.2.2/dist/echarts.min.js"></script> -->
 </head>
 <style>
     * {
