--- a/src/components/dropdown/index.less
+++ b/src/components/dropdown/index.less
@@ -17,6 +17,10 @@
         top             : -99999px;
         z-index         : -1;
 
+        &.right {
+            right: 0;
+        }
+
         .m-dropdown-menu-item {
             display   : block;
             padding   : 8px 16px;
