--- a/src/styles/index.less
+++ b/src/styles/index.less
@@ -7,7 +7,7 @@
     box-sizing : border-box;
     padding    : 0;
     margin     : 0;
-    font-size  : @ui-font-size;
+    font-size  : @ui-font-size-text;
     line-height: @ui-line-height-base;
 }
 
