--- a/src/styles/variables.less
+++ b/src/styles/variables.less
@@ -43,7 +43,7 @@
 @ui-loading-shadow-color     : var(--ui-loading-color, #000000);
 // 字体
 @ui-font-size                : var(--ui-font-size, 12px); // 提示、辅助文本
-@ui-font-size                : var(--ui-font-size, 14px); //正文、卡片副标题
+@ui-font-size-text           : var(--ui-font-size-text, 14px); //正文、卡片副标题
 @ui-font-size-card-title     : var(--ui-font-size-card-title, 16px); //卡片标题
 @ui-font-size-page-title     : var(--ui-font-size-page-title, 18px); //页面标题
 @ui-font-size-icon           : var(--ui-font-size-icon, 16px); //图标大小
