--- a/src/styles/index.less
+++ b/src/styles/index.less
@@ -11,9 +11,12 @@
     line-height: @ui-line-height-base;
 }
 
-
 .pointer {
     cursor: pointer;
+}
+
+.inline {
+    display: inline-block;
 }
 
 .center {
