upd: 优化主题切换

--- a/src/components/avatar/index.less
+++ b/src/components/avatar/index.less
@@ -1,6 +1,7 @@
 .m-avatar {
-    width : 40px;
-    height: 40px;
+    width           : 40px;
+    height          : 40px;
+    background-color: #fff;
 
     &.circle {
         border-radius: 50%;
