--- a/src/components/skeleton/index.less
+++ b/src/components/skeleton/index.less
@@ -3,7 +3,7 @@
     height         : 16px;
     width          : 100%;
     border-radius  : 4px;
-    background     : linear-gradient(90deg, #f2f2f2 25%, #e6e6e6 37%, #f2f2f2 63%);
+    background     : @ui-skeleton-background;
     background-size: 400% 100%;
     animation      : skeleton-loading 1.4s ease infinite;
 
