--- a/src/styles/variables.less
+++ b/src/styles/variables.less
@@ -38,9 +38,8 @@
 @ui-form-control-line        : var(--ui-form-control-line, #e6e6e6); // 表单控件边框色，同 边框分割线
 @ui-form-control-line-hover  : var(--ui-form-control-line-hover, #acafb4); // 表单控件边框悬停反馈色
 @ui-form-control-line-active : var(--ui-form-control-line-active, #597bec); // 表单控件边框激活色，用于获得焦点
-// 加载动画颜色
-@ui-loading-color            : var(--ui-loading-color, #a29df1);
-@ui-loading-shadow-color     : var(--ui-loading-color, #000000);
+// 骨架动画颜色
+@ui-skeleton-background      : var(--ui-skeleton-background, linear-gradient(90deg, #f2f2f2 25%, #e6e6e6 37%, #f2f2f2 63%));
 // 字体
 @ui-font-size                : var(--ui-font-size, 12px); // 提示、辅助文本
 @ui-font-size-text           : var(--ui-font-size-text, 14px); //正文、卡片副标题
@@ -50,3 +49,8 @@
 @ui-line-height-base         : var(--ui-line-height-base, 1.5); //规范行高
 @ui-font-title-weight        : var(--ui-font-title-weight, bold); //标题文字粗细
 @ui-font-content-weight      : var(--ui-font-content-weight, normal); //内容文字粗细
+
+// 过渡混入
+.transitionMixin() {
+    transition: color @ui-transition-duration, background-color @ui-transition-duration;
+}
