--- a/src/components/model/index.less
+++ b/src/components/model/index.less
@@ -5,7 +5,7 @@
     width           : 100vw;
     height          : 100vh;
     z-index         : 99;
-    background-color: #0000005c;
+    background-color: #3131315c;
 }
 
 .m-model {
@@ -17,7 +17,7 @@
     border-radius: @ui-border-radius-card;
 
     .m-model-header {
-        border-bottom: 0.5px solid @ui-border-line;
+        border-bottom: 0.5px solid @ui-dividing-line;
         padding      : 0 1em;
         display      : flex;
         align-items  : center;
