--- a/src/styles/form.less
+++ b/src/styles/form.less
@@ -113,6 +113,7 @@ input[type="password"] {
     width        : 100%;
     height       : 2.4em;
     border       : 0.5px solid @ui-form-control-line;
+    color        : var(--color-font, #000);
     border-radius: @ui-border-radius;
     transition   : all @ui-transition-duration;
 
