--- a/src/components/dropdown/index.less
+++ b/src/components/dropdown/index.less
@@ -17,7 +17,7 @@
         top             : -99999px;
         z-index         : -1;
 
-        &.right {
+        &.tip-right {
             right: 0;
         }
 
