--- a/src/components/editor/index.less
+++ b/src/components/editor/index.less
@@ -6,9 +6,11 @@
         display      : block;
         padding      : 10px;
         margin-bottom: 10px;
-        border       : 0.5px solid @ui-form-control-line;
+        border       : var(@ui-input-border, 0.5px solid @ui-form-control-line);
         border-radius: @ui-border-radius;
         transition   : all @ui-transition-duration;
+        box-shadow   : @ui-input-box-shadow;
+        background   : @ui-input-background-color;
 
         &.placeholder-shown::before {
             content       : attr(placeholder);
