--- a/src/styles/form.less
+++ b/src/styles/form.less
@@ -112,10 +112,12 @@ input[type="password"] {
     padding      : 0 0.5em;
     width        : 100%;
     height       : 2.4em;
-    border       : 0.5px solid @ui-form-control-line;
     color        : var(--color-font, #000);
     border-radius: @ui-border-radius;
     transition   : all @ui-transition-duration;
+    border       : var(@ui-input-border, 0.5px solid @ui-form-control-line);
+    box-shadow   : @ui-input-box-shadow;
+    background   : @ui-input-background-color;
 
     &:hover {
         border-color: @ui-form-control-line-hover;
