--- a/src/styles/variables.less
+++ b/src/styles/variables.less
@@ -50,6 +50,10 @@
 @ui-font-title-weight        : var(--ui-font-title-weight, bold); //标题文字粗细
 @ui-font-content-weight      : var(--ui-font-content-weight, normal); //内容文字粗细
 
+@ui-input-box-shadow      : var(--ui-input-box-shadow);
+@ui-input-background-color: var(--ui-input-background-color);
+@ui-input-border          : var(--ui-input-border);
+
 // 过渡混入
 .transitionMixin() {
     transition: color @ui-transition-duration, background-color @ui-transition-duration;
