fix: fix css var

--- a/src/components/editor/index.less
+++ b/src/components/editor/index.less
@@ -6,7 +6,7 @@
         display      : block;
         padding      : 10px;
         margin-bottom: 10px;
-        border       : var(@ui-input-border, 0.5px solid @ui-form-control-line);
+        border       : @ui-input-border;
         border-radius: @ui-border-radius;
         transition   : all @ui-transition-duration;
         box-shadow   : @ui-input-box-shadow;
