--- a/src/styles/form.less
+++ b/src/styles/form.less
@@ -115,7 +115,7 @@ input[type="password"] {
     color        : var(--color-font, #000);
     border-radius: @ui-border-radius;
     transition   : all @ui-transition-duration;
-    border       : var(@ui-input-border, 0.5px solid @ui-form-control-line);
+    border       : @ui-input-border;
     box-shadow   : @ui-input-box-shadow;
     background   : @ui-input-background-color;
 
