--- a/src/styles/variables.less
+++ b/src/styles/variables.less
@@ -52,7 +52,7 @@
 
 @ui-input-box-shadow      : var(--ui-input-box-shadow);
 @ui-input-background-color: var(--ui-input-background-color);
-@ui-input-border          : var(--ui-input-border);
+@ui-input-border          : var(--ui-input-border, 0.5px solid var(--ui-form-control-line, #e6e6e6));
 
 // 过渡混入
 .transitionMixin() {
